Build Scram Stub each time a testing center command is issued.